[feat]: [SSCA-1057]: Add API for artifacts listing
